# up2p

./: CMakeLists.txt  CMakeLists_mac.txt  README.md  build.sh  vm_up2pa.c  vm_up2pc.c  vm_up2pr.c  vm_up2ps.c
build.android/: CMakeCache.txt  Makefile  README  cmake_install.cmake
build.android/android_studio_jni_src/src/main/: AndroidManifest.xml
build.android/android_studio_jni_src/src/main/cpp/: CMakeLists.txt  ulink_jni.c
build.android/android_studio_jni_src/src/main/java/com/ulink/: UlinkGPIO.java  UlinkIIC.java  UlinkNative.java  UlinkPWM.java
build.android/android_studio_jni_src/src/main/java/com/ulink/demo/: MLog.java  MainActivity.java
build.ios/: README  build.sh
config/: up2ps.ini
doc/: APP 接口文档.md
include/: application.h  config.h  ulink.h  up2p.h  util.h  utlist.h
src/crypt/: aes.c  aes.h  up2p_crypt.c  up2p_crypt.h
src/protocol/: protocol_up2p.c  protocol_up2p.h
src/rest_api/: factory_evalogik.c  factory_evalogik.h  rest_api.c  rest_api.h  u_poxis.c  u_poxis.h  vlink.c  vlink.h
src/up2pa/: buglist.txt  ctrl.c  ulink.c  up2pa.c  up2pa.h
src/up2pc/: up2p_posix.c  up2pc.c  up2pc.h
src/up2ps/: apc_color_conversions.c  make.sh  test  up2p_oauth2.c  up2ps.c  up2ps.h  up2ps_ctrl.c  up2ps_ctrl.h  up2ps_rest_api.c  up2ps_rest_api.h  up2ps_skill.c  up2ps_skill.h
src/util/: debug.c  observer_queue.c  observer_queue.h  util.c
